--- a/requirements.txt
+++ b/requirements.txt
@@ -1,131 +1,1 @@
-absl-py==0.9.0
-appdirs==1.4.3
-appnope==0.1.0
-APScheduler==2.1.2
-astor==0.8.0
-astroid==2.3.3
-astunparse==1.6.3
-attrs==19.3.0
-autopep8 @ file:///tmp/build/80754af9/autopep8_1596578164842/work
-backcall==0.2.0
-beautifulsoup4==4.8.2
-black==19.10b0
-bs4==0.0.1
-cachetools==4.1.1
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.1
-colorlog==4.1.0
-curl==0.0.1
-cycler==0.10.0
-decorator==4.4.2
-entrypoints==0.3
-et-xmlfile==1.0.1
-Flask==1.1.2
-Flask-PyMongo==2.3.0
-flatbuffers==1.12
-future==0.18.2
-gast==0.2.2
-google-api-core==1.22.2
-google-api-python-client==1.11.0
-google-auth==1.21.1
-google-auth-httplib2==0.0.4
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
-googleapis-common-protos==1.52.0
-grpcio==1.16.1
-gunicorn==20.0.4
-h5py @ file:///opt/concourse/worker/volumes/live/98bee3fd-2687-4017-5421-d742d1f18c35/volume/h5py_1593454156895/work
-httplib2==0.18.1
-idna==2.9
-ipykernel==5.3.0
-ipython @ file:///opt/concourse/worker/volumes/live/02237e64-34e3-452e-5c63-14b73548ce0e/volume/ipython_1592348474440/work
-ipython-genutils==0.2.0
-iso8601==0.1.12
-isort==4.3.21
-itsdangerous==1.1.0
-jdcal==1.4.1
-jedi @ file:///opt/concourse/worker/volumes/live/114a62c0-dd60-4a40-6382-85abb31b5f6e/volume/jedi_1592841953086/work
-Jinja2==2.11.2
-joblib @ file:///tmp/build/80754af9/joblib_1594236160679/work
-jupyter-client==6.1.3
-jupyter-core==4.6.3
-Keras==2.4.3
-Keras-Applications @ file:///tmp/build/80754af9/keras-applications_1594366238411/work
-Keras-Preprocessing==1.1.2
-kiwisolver==1.2.0
-lazy-object-proxy==1.4.3
-llvmlite==0.33.0
-m3u8==0.5.4
-Markdown==3.1.1
-MarkupSafe==1.1.1
-matplotlib==3.2.1
-mccabe==0.6.1
-mkl-fft==1.0.15
-mkl-random==1.1.0
-mkl-service==2.3.0
-mpmath==1.1.0
-mypy-extensions==0.4.3
-numba==0.50.1
-numpy @ file:///opt/concourse/worker/volumes/live/40d975a3-7e82-44c8-53df-feccdbce8b96/volume/numpy_and_numpy_base_1596233859108/work
-oauth2client==2.2.0
-oauthlib==3.1.0
-openpyxl==3.0.5
-opt-einsum==3.1.0
-ordereddict==1.1
-pandas==1.0.3
-parso==0.7.0
-pathspec==0.7.0
-pexpect==4.8.0
-pickleshare==0.7.5
-prompt-toolkit==3.0.5
-protobuf==3.12.3
-ptyprocess==0.6.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.6.0
-Pygments==2.6.1
-pylint==2.4.4
-pymongo==3.11.0
-pyparsing==2.4.6
-pyperclip==1.8.0
-python-dateutil==2.8.1
-pytz==2019.3
-PyYAML==5.3.1
-pyzmq==18.1.1
-regex==2020.2.20
-requests==2.23.0
-requests-oauthlib==1.3.0
-rsa==4.6
-scikit-learn @ file:///opt/concourse/worker/volumes/live/eab838ab-55a5-40d0-5cbd-f1854d35aa9d/volume/scikit-learn_1592503039331/work
-scipy @ file:///opt/concourse/worker/volumes/live/14622691-c324-4e90-5a99-87aced91207b/volume/scipy_1592930535761/work
-seaborn==0.10.1
-selenium==3.141.0
-six==1.14.0
-soupsieve==2.0
-starbase==0.3.3
-sympy==1.6.1
-tb-nightly==2.4.0a20200803
-tensorboard==2.0.0
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.0.0
-tensorflow-estimator==2.0.0
-termcolor==1.1.0
-tf-estimator-nightly==2.4.0.dev2020080301
-tf-nightly==2.4.0.dev20200803
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-toml==0.10.0
-torch==1.6.0
-tornado==6.0.4
-traitlets==4.3.3
-typed-ast==1.4.1
-typing-extensions==3.7.4.1
-udemy-dl==0.2.1
-unicode-slugify==0.1.3
-Unidecode==1.1.1
-uritemplate==3.0.1
-urllib3==1.25.8
-wcwidth==0.2.4
-Werkzeug==1.0.1
-wrapt==1.12.1
-xlrd==1.2.0
+Flask
